--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -15,3 +15,14 @@ h1{
     font-weight: normal;
     color:white; 
 }
+
+h2{
+    color: aquamarine;
+    text-align: center;
+    font-size: 20px;;
+}
+
+.video{
+    width: 403.99px;
+    margin: 0 auto;
+}
